[gd_scene load_steps=38 format=3 uid="uid://dkbgiiq2ltfal"]

[ext_resource type="Script" path="res://scripts/start_game_mobile.gd" id="1_50dj5"]
[ext_resource type="Texture2D" uid="uid://jnfb3g2sxub7" path="res://assets/background/finish 1-for jslovie-7D5C2-V5.png" id="3_scuxx"]
[ext_resource type="Texture2D" uid="uid://bv00fhk45wgqd" path="res://assets/background/Full-1-export.png" id="4_0ctxi"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="5_ivw4d"]
[ext_resource type="PackedScene" uid="uid://coxtxpj8ay5h5" path="res://scenes/player.tscn" id="6_utxx4"]
[ext_resource type="Texture2D" uid="uid://sdfbape0kcqu" path="res://assets/paper UI/Sprite-0001.png" id="7_nt0fi"]
[ext_resource type="Texture2D" uid="uid://dhs3vuxrp12ua" path="res://assets/paper UI/cross.png" id="8_4y63w"]
[ext_resource type="PackedScene" uid="uid://dunu1cp1jano7" path="res://scenes/pieces/sword_piece.tscn" id="9_eh6il"]
[ext_resource type="PackedScene" uid="uid://b74srkyidy144" path="res://scenes/GUI/settings.tscn" id="9_fe7ud"]
[ext_resource type="PackedScene" uid="uid://b1ka35p6f2npn" path="res://scenes/pieces/gems/blue_gem_piece.tscn" id="9_ojutj"]
[ext_resource type="PackedScene" uid="uid://cimytguusum2p" path="res://scenes/pieces/gems/gold_piece.tscn" id="10_d82lx"]
[ext_resource type="PackedScene" uid="uid://bifbrygn0hueh" path="res://scenes/pieces/gems/green_gem_piece.tscn" id="11_xs7rf"]
[ext_resource type="PackedScene" uid="uid://b6ma0x7jmtjrq" path="res://scenes/pieces/gems/red_gem_piece.tscn" id="12_ucb3k"]
[ext_resource type="PackedScene" uid="uid://dpmm7xbvxvh6v" path="res://scenes/pieces/gems/yellow_gem_piece.tscn" id="13_jtjb3"]
[ext_resource type="PackedScene" uid="uid://v7xutm1d7nmt" path="res://scenes/pieces/axe_piece.tscn" id="14_peyx2"]
[ext_resource type="PackedScene" uid="uid://dsebm1kd48wof" path="res://scenes/pieces/barb_shield_piece.tscn" id="15_4oyw3"]
[ext_resource type="PackedScene" uid="uid://nt3m0cdtl68u" path="res://scenes/pieces/bolt_staff_piece.tscn" id="16_ecfvi"]
[ext_resource type="PackedScene" uid="uid://bv0ldcglpasbk" path="res://scenes/pieces/bow_piece.tscn" id="17_6dhiy"]
[ext_resource type="PackedScene" uid="uid://boj3m5pofrj5" path="res://scenes/pieces/crossbow_piece.tscn" id="18_xda4r"]
[ext_resource type="PackedScene" uid="uid://bo3eap0fny0jc" path="res://scenes/pieces/dagger_piece.tscn" id="19_r5l0u"]
[ext_resource type="PackedScene" uid="uid://cfgcl2m5l2qjd" path="res://scenes/pieces/flail_piece.tscn" id="20_xikwu"]
[ext_resource type="PackedScene" uid="uid://clwqkm8vxwml7" path="res://scenes/pieces/heal_piece.tscn" id="21_xvgwl"]
[ext_resource type="PackedScene" uid="uid://liqq86f5ihs3" path="res://scenes/pieces/ice_staff_piece.tscn" id="22_obuk2"]
[ext_resource type="PackedScene" uid="uid://qoryo24dni6g" path="res://scenes/pieces/invisibility_ring_piece.tscn" id="23_rg2vf"]
[ext_resource type="PackedScene" uid="uid://dialgagrvk5wx" path="res://scenes/pieces/longsword_piece.tscn" id="24_2qvii"]
[ext_resource type="PackedScene" uid="uid://bfyb02eqj3ipv" path="res://scenes/pieces/mace_piece.tscn" id="25_d1pe4"]
[ext_resource type="PackedScene" uid="uid://csnwfbdroxwg0" path="res://scenes/pieces/material_piece.tscn" id="26_nhfk0"]
[ext_resource type="PackedScene" uid="uid://bcnvxbl67adg2" path="res://scenes/pieces/maul_piece.tscn" id="27_bjfll"]
[ext_resource type="PackedScene" uid="uid://iyqiu0ynkg46" path="res://scenes/pieces/piece.tscn" id="28_8d8me"]
[ext_resource type="PackedScene" uid="uid://cmw4eeyvxun18" path="res://scenes/pieces/rage_piece.tscn" id="29_glh1n"]
[ext_resource type="PackedScene" uid="uid://bql308123inii" path="res://scenes/pieces/random_piece.tscn" id="30_spnma"]
[ext_resource type="PackedScene" uid="uid://caa8r8tto8tvc" path="res://scenes/pieces/rogue_shield_piece.tscn" id="31_qi7jl"]
[ext_resource type="PackedScene" uid="uid://b570oxexdcdm3" path="res://scenes/pieces/shield_piece.tscn" id="32_mtb5c"]
[ext_resource type="PackedScene" uid="uid://dsldr4paobbfe" path="res://scenes/pieces/sickle_piece.tscn" id="33_j0rvi"]

[sub_resource type="Animation" id="Animation_57v0p"]
resource_name = "Demo"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemoVersion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.8, 0.8), Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_54e52"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemoVersion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6bq0w"]
_data = {
"Demo": SubResource("Animation_57v0p"),
"RESET": SubResource("Animation_54e52")
}

[node name="StartGameMobile" type="CanvasLayer"]
script = ExtResource("1_50dj5")

[node name="BackgroundSprite2D" type="Sprite2D" parent="."]
position = Vector2(127, 538)
scale = Vector2(6, 6)
texture = ExtResource("3_scuxx")

[node name="GameTitleSprite2D" type="Sprite2D" parent="."]
position = Vector2(288, 160)
scale = Vector2(0.9, 0.9)
texture = ExtResource("4_0ctxi")

[node name="Testing" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 672.0
offset_top = 478.0
offset_right = 1044.0
offset_bottom = 598.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "For testing"

[node name="Remove" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 406.0
offset_top = 478.0
offset_right = 890.0
offset_bottom = 598.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Remove filesave"

[node name="StartGame" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -143.0
offset_right = 186.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "New Game	"

[node name="Options" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = 27.0
offset_right = 186.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Mobil"

[node name="QuitGame" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = 199.0
offset_right = 186.0
offset_bottom = 343.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Quit Game"

[node name="GameTitle" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -884.0
offset_top = -518.0
offset_right = 452.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 192
text = "Gemmiferous"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestSection" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("6_utxx4")]
position = Vector2(-1260, 974)

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 69.0
offset_right = 150.0
offset_bottom = 385.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 4

[node name="StartGameNew" type="TextureButton" parent="Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("7_nt0fi")

[node name="Label" type="Label" parent="Buttons/StartGameNew"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 300.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "New Game"

[node name="Continue" type="TextureButton" parent="Buttons"]
modulate = Color(1, 1, 1, 0.509804)
custom_minimum_size = Vector2(0, 60)
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("7_nt0fi")

[node name="Label" type="Label" parent="Buttons/Continue"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 300.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Continue"

[node name="OptionsNew" type="TextureButton" parent="Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture_normal = ExtResource("7_nt0fi")

[node name="Label" type="Label" parent="Buttons/OptionsNew"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 300.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="Credits" type="TextureButton" parent="Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture_normal = ExtResource("7_nt0fi")

[node name="Label" type="Label" parent="Buttons/Credits"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 300.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Credits"

[node name="QuitGameNew" type="TextureButton" parent="Buttons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture_normal = ExtResource("7_nt0fi")

[node name="Label" type="Label" parent="Buttons/QuitGameNew"]
layout_mode = 0
offset_left = 4.0
offset_top = -1.0
offset_right = 300.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 64
text = "Quit Game"

[node name="Version" type="Label" parent="."]
offset_left = 1.0
offset_top = 1.0
offset_right = 103.0
offset_bottom = 31.0
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 32
text = "v0.5.3.0.m.0.3.0.i"

[node name="DemoVersion" type="Label" parent="."]
visible = false
offset_left = 351.0
offset_top = 132.0
offset_right = 495.0
offset_bottom = 222.0
rotation = -0.233504
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(147, 45)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_font_sizes/font_size = 96
text = "iOS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6bq0w")
}

[node name="DemoMessage" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 339.0
offset_top = -438.0
offset_right = 959.0
offset_bottom = 438.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.517647)

[node name="DemoLabelTitle" type="Label" parent="DemoMessage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.5
offset_top = 25.0
offset_right = 306.5
offset_bottom = 87.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Welcome
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DemoText" type="Label" parent="DemoMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 97.0
offset_right = -5.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Thank you so much for downloading the demo!
Your support and interest in my game mean the world to me.
I’d greatly appreciate any feedback or insights you have to offer.
Please keep in mind that the game is still in the early stages of development, and many aspects are likely to change.
For the full release, I plan to introduce a lot of new features and gameplay improvements.

If you enjoy the gameplay loop, I’d be honored if you considered wishlisting the game.




Thank you again, and stay safe!"
autowrap_mode = 2

[node name="Close" type="TextureButton" parent="DemoMessage"]
layout_mode = 0
offset_left = 588.0
offset_right = 604.0
offset_bottom = 16.0
scale = Vector2(2, 2)
texture_normal = ExtResource("8_4y63w")

[node name="Wishlist" type="TextureButton" parent="DemoMessage"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -257.0
offset_top = 673.0
offset_right = 65.0
offset_bottom = 736.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)

[node name="Label" type="Label" parent="DemoMessage/Wishlist"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Wishlist Gemmiferous 
on Steam!"
horizontal_alignment = 1

[node name="Settings" parent="." instance=ExtResource("9_fe7ud")]
visible = false
offset_top = -21.0
offset_bottom = -21.0

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = 314.0
offset_right = -1.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Back" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ivw4d")
theme_override_font_sizes/font_size = 32
text = "Back	"

[node name="Removesavefile" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.517647)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Removesavefile"]
layout_mode = 0
offset_left = -288.0
offset_top = -279.0
offset_right = 288.0
offset_bottom = 27.0
color = Color(0, 0, 0, 0.482353)

[node name="RemovesavefileLabel" type="Label" parent="Removesavefile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -287.0
offset_top = -275.0
offset_right = 96.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "*This action will delete your save file and start a new game. Are you sure you want to proceed?*"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Yes" type="TextureButton" parent="Removesavefile"]
layout_mode = 0
offset_left = -142.0
offset_top = -20.0
offset_right = -115.0
offset_bottom = -5.0
scale = Vector2(3, 3)

[node name="YesLabel" type="Label" parent="Removesavefile/Yes"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 15.0
text = "Yes"

[node name="No" type="TextureButton" parent="Removesavefile"]
layout_mode = 0
offset_left = 52.0
offset_top = -20.0
offset_right = 79.0
offset_bottom = -5.0
scale = Vector2(3, 3)

[node name="NoLabel" type="Label" parent="Removesavefile/No"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 15.0
text = "No"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExitCredits" type="TextureButton" parent="Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -226.0
offset_top = -85.9999
offset_right = -186.0
offset_bottom = -70.9999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(3.5, 3.5)

[node name="ExitCreditsLabel" type="Label" parent="Credits/ExitCredits"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 15.0
text = "Back"

[node name="LeadDevLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 212.0
offset_top = 525.0
offset_right = 442.0
offset_bottom = 555.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "Lead Developer:"

[node name="Label" type="Label" parent="Credits/LeadDevLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 38.6667
offset_right = 89.6667
offset_bottom = 53.6667
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "jslovieDev"

[node name="MusicLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 19.0
offset_top = 612.0
offset_right = 249.0
offset_bottom = 642.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "Music:"

[node name="Label" type="Label" parent="Credits/MusicLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 38.6667
offset_right = 89.6667
offset_bottom = 53.6667
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Augusto Mazzoli"

[node name="Label2" type="Label" parent="Credits/MusicLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 68.6667
offset_right = 135.667
offset_bottom = 83.6667
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Cyberleaf Studio"

[node name="SFXLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 253.0
offset_top = 404.0
offset_right = 483.0
offset_bottom = 434.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "SFX:"

[node name="Label" type="Label" parent="Credits/SFXLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 38.6667
offset_right = 89.6667
offset_bottom = 53.6667
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Leohpaz"

[node name="GameByLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 291.0
offset_top = 212.0
offset_right = 575.0
offset_bottom = 242.0
theme_override_font_sizes/font_size = 32
text = "Game by: jslovieDev"

[node name="PlatestersLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 199.0
offset_top = 799.0
offset_right = 429.0
offset_bottom = 829.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "Playtesters:"

[node name="Label" type="Label" parent="Credits/PlatestersLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 38.6667
offset_right = 89.6667
offset_bottom = 53.6667
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "jslovieDev"

[node name="Label4" type="Label" parent="Credits/PlatestersLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 60.6666
offset_right = 89.6667
offset_bottom = 75.6666
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Skaya"

[node name="Label2" type="Label" parent="Credits/PlatestersLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 86.0
offset_right = 104.667
offset_bottom = 101.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Samalama"

[node name="Label3" type="Label" parent="Credits/PlatestersLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 110.0
offset_right = 104.667
offset_bottom = 125.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "beebooba"

[node name="ArtistsLabel" type="Label" parent="Credits"]
layout_mode = 0
offset_left = 335.0
offset_top = 623.0
offset_right = 565.0
offset_bottom = 653.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 32
text = "Artists:"

[node name="Label" type="Label" parent="Credits/ArtistsLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 38.6667
offset_right = 89.6667
offset_bottom = 53.6667
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Seth"

[node name="Label3" type="Label" parent="Credits/ArtistsLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 64.0
offset_right = 103.667
offset_bottom = 79.0
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "Merry Mary"

[node name="Label4" type="Label" parent="Credits/ArtistsLabel"]
layout_mode = 0
offset_left = 16.6667
offset_top = 87.3333
offset_right = 103.667
offset_bottom = 102.333
scale = Vector2(1.5, 1.5)
theme_override_font_sizes/font_size = 16
text = "jslovieDev"

[node name="Test" type="Node2D" parent="."]

[node name="BlueGemPiece" parent="Test" instance=ExtResource("9_ojutj")]
position = Vector2(68, 279)

[node name="GoldPiece" parent="Test" instance=ExtResource("10_d82lx")]
position = Vector2(144, 277)

[node name="GreenGemPiece" parent="Test" instance=ExtResource("11_xs7rf")]
position = Vector2(213, 273)

[node name="RedGemPiece" parent="Test" instance=ExtResource("12_ucb3k")]
position = Vector2(283, 270)

[node name="YellowGemPiece" parent="Test" instance=ExtResource("13_jtjb3")]
position = Vector2(352, 272)

[node name="AxePiece" parent="Test" instance=ExtResource("14_peyx2")]
position = Vector2(425, 275)

[node name="BarbShieldPiece" parent="Test" instance=ExtResource("15_4oyw3")]
position = Vector2(501, 281)

[node name="BoltStaffPiece" parent="Test" instance=ExtResource("16_ecfvi")]
position = Vector2(69, 356)

[node name="BowPiece" parent="Test" instance=ExtResource("17_6dhiy")]
position = Vector2(145, 359)

[node name="CrossbowPiece" parent="Test" instance=ExtResource("18_xda4r")]
position = Vector2(214, 363)

[node name="DaggerPiece" parent="Test" instance=ExtResource("19_r5l0u")]
position = Vector2(286, 362)

[node name="FlailPiece" parent="Test" instance=ExtResource("20_xikwu")]
position = Vector2(359, 356)

[node name="HealPiece" parent="Test" instance=ExtResource("21_xvgwl")]
position = Vector2(432, 358)

[node name="IceStaffPiece" parent="Test" instance=ExtResource("22_obuk2")]
position = Vector2(501, 361)

[node name="InvisibilityRingPiece" parent="Test" instance=ExtResource("23_rg2vf")]
position = Vector2(70, 431)

[node name="LongswordPiece" parent="Test" instance=ExtResource("24_2qvii")]
position = Vector2(150, 429)

[node name="MacePiece" parent="Test" instance=ExtResource("25_d1pe4")]
position = Vector2(218, 429)

[node name="MaterialPiece" parent="Test" instance=ExtResource("26_nhfk0")]
position = Vector2(291, 433)

[node name="MaulPiece" parent="Test" instance=ExtResource("27_bjfll")]
position = Vector2(361, 438)

[node name="Piece" parent="Test" instance=ExtResource("28_8d8me")]
position = Vector2(439, 441)

[node name="RagePiece" parent="Test" instance=ExtResource("29_glh1n")]
position = Vector2(506, 444)

[node name="RandomPiece" parent="Test" instance=ExtResource("30_spnma")]
position = Vector2(72, 507)

[node name="RogueShieldPiece" parent="Test" instance=ExtResource("31_qi7jl")]
position = Vector2(152, 501)

[node name="ShieldPiece" parent="Test" instance=ExtResource("32_mtb5c")]
position = Vector2(231, 504)

[node name="SicklePiece" parent="Test" instance=ExtResource("33_j0rvi")]
position = Vector2(306, 514)

[node name="SwordPiece" parent="Test" instance=ExtResource("9_eh6il")]
position = Vector2(393, 518)

[connection signal="pressed" from="Testing" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="mouse_entered" from="Buttons/StartGameNew" to="." method="_on_start_game_new_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/StartGameNew" to="." method="_on_start_game_new_mouse_exited"]
[connection signal="pressed" from="Buttons/StartGameNew" to="." method="_on_start_game_new_pressed"]
[connection signal="mouse_entered" from="Buttons/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Continue" to="." method="_on_continue_mouse_exited"]
[connection signal="pressed" from="Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="Buttons/OptionsNew" to="." method="_on_options_new_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/OptionsNew" to="." method="_on_options_new_mouse_exited"]
[connection signal="pressed" from="Buttons/OptionsNew" to="." method="_on_options_new_pressed"]
[connection signal="mouse_entered" from="Buttons/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/Credits" to="." method="_on_credits_mouse_exited"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Buttons/QuitGameNew" to="." method="_on_quit_game_new_mouse_entered"]
[connection signal="mouse_exited" from="Buttons/QuitGameNew" to="." method="_on_quit_game_new_mouse_exited"]
[connection signal="pressed" from="Buttons/QuitGameNew" to="." method="_on_quit_game_new_pressed"]
[connection signal="mouse_entered" from="DemoMessage/Close" to="." method="_on_close_mouse_entered"]
[connection signal="mouse_exited" from="DemoMessage/Close" to="." method="_on_close_mouse_exited"]
[connection signal="pressed" from="DemoMessage/Close" to="." method="_on_close_pressed"]
[connection signal="mouse_entered" from="DemoMessage/Wishlist" to="." method="_on_wishlist_mouse_entered"]
[connection signal="mouse_exited" from="DemoMessage/Wishlist" to="." method="_on_wishlist_mouse_exited"]
[connection signal="pressed" from="DemoMessage/Wishlist" to="." method="_on_wishlist_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="Removesavefile/Yes" to="." method="_on_yes_mouse_entered"]
[connection signal="mouse_exited" from="Removesavefile/Yes" to="." method="_on_yes_mouse_exited"]
[connection signal="pressed" from="Removesavefile/Yes" to="." method="_on_yes_pressed"]
[connection signal="mouse_entered" from="Removesavefile/No" to="." method="_on_no_mouse_entered"]
[connection signal="mouse_exited" from="Removesavefile/No" to="." method="_on_no_mouse_exited"]
[connection signal="pressed" from="Removesavefile/No" to="." method="_on_no_pressed"]
[connection signal="mouse_entered" from="Credits/ExitCredits" to="." method="_on_exit_credits_mouse_entered"]
[connection signal="mouse_exited" from="Credits/ExitCredits" to="." method="_on_exit_credits_mouse_exited"]
[connection signal="pressed" from="Credits/ExitCredits" to="." method="_on_exit_credits_pressed"]
